# pose-estimation

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PLAN.md  README.md  benchmark.py  compaction.sh  constraints.py  drawing.py  export.py  main.py  postprocess.py  processing.py  prototype_rtmw.py  pyproject.toml  requirements.txt  smoothing.py  sweep_default.yaml  sweep_quick.yaml  test_extrapolation.py  test_npu_compat.py  timing.py
.agent/: context.sh  memory.md  roadmap.md
.claude/: INDEX.md  repomap.md  settings.json
.claude/commands/: session-prompt.md
.claude/memory/: decisions.md  lessons.md  scratchpad.md
.claude/prompts/: kickoff.md  sessions.md
.claude/tech/: analysis.md  architecture.md  calibration.md  conventions.md  entrypoints.md  environment.md  multicam.md  optimization.md  tests.md  tracking-modes.md  validation.md
.serena/: project.yml
analysis/: analysis_summary.Rmd  arthrose_diag.R  clinical_correlation.R  clinical_dimreduce.R  clinical_features.R  compare.R  compare_clinical.R  data_extraction.R  features.R  keypoint_detail.R  longitudinal.R  make_templates.R  summary.R  temporal_clinical.R  timeseries.R  utils.R  validate_metadata.R
docs/: capture_protocol.md
scripts/: npu_compat.py  repomap.py
scripts/benchmarks/: __init__.py  _fixtures.py  _harness.py  aggregate.py  bench_constraints.py  bench_detection.py  bench_drawing.py  bench_matching.py  bench_metrics.py  bench_processing.py  bench_smoothing.py  profile_hotspots.py  run.py
src/pose_estimation/: __init__.py  _types.py  benchmark.py  calibration.py  calibration_cli.py  charuco.py  constraints.py  detection.py  drawing.py  export.py  main.py  mapping.py  metrics.py  models.py  multicam.py  postprocess.py  processing.py  rtmlib_openvino.py  rtmlib_smoothing.py  run.py  smoothing.py  triangulation.py  validation.py  video_io.py
tests/: conftest.py  synthetic_session.py  test_benchmark_config.py  test_calibration.py  test_calibration_cli.py  test_charuco.py  test_constraints.py  test_detection.py  test_extrapolation.py  test_helpers.py  test_mapping.py  test_matching.py  test_models_checksum.py  test_multicam.py  test_processing.py  test_public_api.py  test_r_pipeline.py  test_repomap.py  test_rtmlib_csv_export.py  test_rtmw_age_gating.py  test_rtmw_confidence.py  test_rtmw_constraints.py  test_rtmw_extrapolation.py  test_rtmw_matching.py  test_rtmw_regions.py  test_smoothing.py  test_triangulation.py  test_validation.py  test_validation_failuremodes.py
