[project]
name = "pose-estimation"
version = "0.1.0"
description = "Real-time pose estimation combining MediaPipe TFLite models with Intel OpenVINO inference"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0 WITH LLVM-exception"
dependencies = [
    "openvino>=2023.1.0",
    "opencv-python-headless",
    "numpy",
    "scipy",
    "pandas",
    "pygame-ce",
    "tqdm",
    "requests",
    "rtmlib",
    "pyyaml",
]

[project.scripts]
pose-estimation = "pose_estimation.main:main"
pose-estimation-run = "pose_estimation.run:main"
pose-estimation-benchmark = "pose_estimation.benchmark:main"
pose-estimation-postprocess = "pose_estimation.postprocess:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pose_estimation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
