[project]
name = "pose-estimation"
version = "0.1.0"
description = "Real-time pose estimation combining MediaPipe TFLite models with Intel OpenVINO inference"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0 WITH LLVM-exception"
license-files = ["LICENSE"]
authors = [
    { name = "Emir Turkes", email = "eturkes@bu.edu" },
]
keywords = [
    "pose-estimation",
    "computer-vision",
    "mediapipe",
    "openvino",
    "rehabilitation",
    "rtmpose",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "openvino>=2023.1.0",
    "pandas>=2.0",
    "pygame-ce>=2.4",
    "pyyaml>=6.0",
    "requests>=2.31",
    "rtmlib>=0.0.13",
    "scipy>=1.11",
    "tqdm>=4.66",
]

[project.scripts]
pose-estimation = "pose_estimation.main:main"
pose-estimation-run = "pose_estimation.run:main"
pose-estimation-benchmark = "pose_estimation.benchmark:main"
pose-estimation-postprocess = "pose_estimation.postprocess:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pose_estimation"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md", "LICENSE", "pyproject.toml"]

[dependency-groups]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "types" },
]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
]
lint = [
    "ruff>=0.15",
]
types = [
    "ty>=0.0.31",
]

[tool.uv]
required-version = ">=0.11"
package = true

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--import-mode=importlib",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pkg_resources.*",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "scripts"]
extend-exclude = [".venv", "renv", "model", "output", "videos"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific
    "NPY",  # numpy-specific
    "PD",   # pandas-vet
    "PERF", # perflint
]
ignore = [
    "E501",   # line-too-long (formatter handles it)
    "SIM108", # ternary is not always clearer
    "N803",   # argument naming — scientific convention (L/R side, M matrix)
    "N806",   # variable naming — scientific convention (L/R side, M matrix)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803", "N806"]  # test functions often use non-PEP8 names
"scripts/**" = ["T201"]                 # scripts may print
"scripts/benchmarks/**" = [
    "T201",
    "PERF401",  # explicit for-append loops read more clearly in bench builders
    "RUF003",   # allow µ and similar unit symbols in comments/strings
]

[tool.ruff.lint.isort]
known-first-party = ["pose_estimation"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ty.environment]
root = ["src"]
python-version = "3.10"

[tool.ty.src]
include = ["src", "tests"]
